--- a/quiltblocks_style.css
+++ b/quiltblocks_style.css
@@ -85,7 +85,7 @@ a:hover {
 
 .sewingicons {
   margin-top: -10px;
-  padding-top: 20px;
+  padding-top: 20px 0;
   background-color: rgba(177, 194, 190, .4);
   color: #fff;
 }
